--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "markdown": "^0.5.0",
-    "nuxt": "^1.0.0-rc11"
+    "nuxt": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
